[package]
name = "epub"
version = "0.1.0"
edition = "2024"
description = "Non-interactive EPUB text extraction for CLI and piping"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.36"
anyhow = "1"
